--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ exclude: ['/automation/', 'README.md', 'LICENSE.txt', 'CNAME']
 title: "VAcademy [XYZ]"
 email: "munichacm@gmail.com"
 description: ""
-baseurl: "/"
+baseurl: "/2015"
 url: "https://vacademy.github.io"
 #permalink: "/blog/:title"
 
